Fix dark mode bug

--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -75,3 +75,7 @@ hr {
 .css-dsuxgy-MuiTableCell-root {
   border-bottom: transparent !important;
 }
+
+.dark-text {
+  color: #000;
+}
