--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -41,12 +41,30 @@
   padding: 0px;
 }
 
+.scoreboard-container-dark {
+  grid-area: scoreboard;
+  max-width: inherit;
+  background-color: #2e2e2e;
+  border-radius: 15px;
+  padding: 0px;
+}
+
+
 .tutorial-container {
   grid-area: tutorial;
   color: #000;
   height: 328px;
   width: 100%;
   background-color: #F3F3F3;
+  border-radius: 15px;
+  padding: 0 12px;
+}
+
+.tutorial-container-dark {
+  grid-area: tutorial;
+  height: 328px;
+  width: 100%;
+  background-color: #2e2e2e;
   border-radius: 15px;
   padding: 0 12px;
 }
